[project]

name = "volanet-repo"
version = "0.1.0"
description = "full stack application that performs volatility analysis on the S&P 500 using a LSTM model"
authors = [
    {name = "lyanriu8",email = "ryanliu103@gmail.com"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "beautifulsoup4==4.14.3",
    "build==1.4.0",
    "cachecontrol==0.14.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "curl-cffi==0.13.0",
    "distlib==0.4.0",
    "dulwich==1.0.0",
    "fastapi==0.128.0",
    "fastjsonschema==2.21.2",
    "filelock==3.20.3",
    "findpython==0.7.1",
    "frozendict==2.4.7",
    "fsspec==2026.1.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "jinja2==3.1.6",
    "keyring==25.7.0",
    "markupsafe==3.0.3",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multitasking==0.0.12",
    "numpy==2.4.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pbs-installer==2026.1.27",
    "peewee==3.19.0",
    "pillow==12.1.0",
    "pkginfo==1.12.1.2",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "protobuf==6.33.4",
    "pyarrow==23.0.0",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rapidfuzz==3.14.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "setuptools==80.10.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soupsieve==2.8.1",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tomlkit==0.14.0",
    "trove-classifiers==2026.1.14.14",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "virtualenv==20.36.1",
    "websockets==16.0",
    "xattr==1.3.0",
    "yfinance==1.0",
    "zstandard==0.25.0"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
